feat: update apply review changes logic